--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
   <title>Safety Filtering for High-Dimensional Stochastic Systems via Particle Reachability Value Functions - Hyeontae Sung, Zeyuan Feng, Jason J. Choi, and Somil Bansal | Academic Research</title>
   
   <!-- Favicon and App Icons -->
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
-  <link rel="apple-touch-icon" href="static/images/favicon.ico">
+  <!-- <link rel="icon" type="image/x-icon" href="static/images/favicon.ico"> -->
+  <!-- <link rel="apple-touch-icon" href="static/images/favicon.ico"> -->
   
   <!-- Critical CSS - Load synchronously -->
   <link rel="stylesheet" href="static/css/bulma.min.css">
@@ -244,8 +244,8 @@
             <h1 class="title is-1 publication-title">Safety Filtering for High-Dimensional Stochastic Systems via Particle Reachability Value Functions</h1>
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
-              <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">will be updated soon</a><sup>*</sup>,</span>
+              <!-- <span class="author-block"> -->
+                <!-- <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">will be updated soon</a><sup>*</sup>,</span> -->
                 <!-- <span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
                   <span class="author-block">
@@ -341,7 +341,7 @@
         <div class="content has-text-justified">
           <!-- TODO: Replace with your paper abstract -->
           <p>
-            will be updated soon
+            This page will be updated soon.
           </p>
         </div>
       </div>
