--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <!-- TODO: Replace with actual paper title -->
             <h5>Stochastic DeepReach</h5>
             <!-- TODO: Replace with brief description -->
-            <p>This page will be updated soon.</p>
+            <p>If you are interested in this work, please contact <a href="https://hyeontaesung.github.io/"></a>me</a>.</p>
             <!-- TODO: Replace with venue and year -->
             <span class="work-venue">Conference/Journal 2024</span>
           </div>
@@ -245,7 +245,7 @@
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
               <!-- <span class="author-block"> -->
-                <!-- <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">will be updated soon</a><sup>*</sup>,</span> -->
+                <!-- <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Hyeontae Sung</a><sup>*</sup>,</span> -->
                 <!-- <span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
                   <span class="author-block">
@@ -341,7 +341,8 @@
         <div class="content has-text-justified">
           <!-- TODO: Replace with your paper abstract -->
           <p>
-            This page will be updated soon.
+            If you are interested in this work, please contact 
+            <a href="https://hyeontaesung.github.io/">me</a>.
           </p>
         </div>
       </div>
@@ -358,7 +359,7 @@
 
 
 
-<!--BibTex citation -->
+<!--BibTex citation 
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <div class="bibtex-header">
@@ -377,7 +378,7 @@
 }</code></pre>
     </div>
 </section>
-<!--End BibTex citation -->
+End BibTex citation -->
 
 
   <footer class="footer">
