--- a/index.html
+++ b/index.html
@@ -355,7 +355,71 @@
 
 
 
+<!-- Results -->
+<section class="section" id="results">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3 has-text-centered">Results</h2>
 
+    <div class="content">
+      <p>
+        Probabilistic Recursively Feasible Model Predictive Control (PRF-MPC) significantly improves recursive feasibility over nominal MPC approaches with low computational costs.
+      </p>
+    </div>
+
+    <p class="has-text-centered has-text-grey is-size-6">
+      Table 1: Simulation results.
+    </p>
+
+    <div class="table-container">
+      <table class="table is-bordered is-striped is-hoverable is-fullwidth">
+        <thead>
+          <tr>
+            <th rowspan="2">Method</th>
+            <th colspan="2" class="has-text-centered">n = 1</th>
+            <th colspan="2" class="has-text-centered">n = 5</th>
+            <th colspan="2" class="has-text-centered">n = 10</th>
+          </tr>
+          <tr>
+            <th class="has-text-right">Timeout (%)</th>
+            <th class="has-text-right">Collision (%)</th>
+            <th class="has-text-right">Timeout (%)</th>
+            <th class="has-text-right">Collision (%)</th>
+            <th class="has-text-right">Timeout (%)</th>
+            <th class="has-text-right">Collision (%)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>CC-MPC</td>
+            <td class="has-text-right">2</td>
+            <td class="has-text-right">13</td>
+            <td class="has-text-right">7</td>
+            <td class="has-text-right">23</td>
+            <td class="has-text-right">11</td>
+            <td class="has-text-right">19</td>
+          </tr>
+          <tr>
+            <td><strong>Ours</strong></td>
+            <td class="has-text-right"><strong>1</strong></td>
+            <td class="has-text-right"><strong>1</strong></td>
+            <td class="has-text-right"><strong>11</strong></td>
+            <td class="has-text-right"><strong>3</strong></td>
+            <td class="has-text-right"><strong>19</strong></td>
+            <td class="has-text-right"><strong>10</strong></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <p class="has-text-grey is-size-7">
+      RF Rate denotes the fraction of closed-loop simulations that remain recursively feasible.
+      Cost denotes the 2-norm of the deviation of closed-loop trajectories from the reference trajectory.
+      d<sub>min</sub> indicates the minimum distance to obstacles averaged over all runs.
+      Comp. Time denotes the average worst-case solve time.
+    </p>
+  </div>
+</section>
+<!-- End Results -->
 
 
 
