--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
         <div class="content has-text-justified">
           <!-- TODO: Replace with your paper abstract -->
           <p>
+            We are developing a safety control and filtering method for high-dimensional stochastic systems using reachability analysis, control barrier functions, and machine learning.
             If you are interested in this work, please contact 
             <a href="https://hyeontaesung.github.io/">me</a>.
           </p>
@@ -358,16 +359,16 @@
 <!-- Results -->
 <section class="section" id="results">
   <div class="container is-max-desktop">
-    <h2 class="title is-3 has-text-centered">Results</h2>
+    <h2 class="title is-3 has-text-centered">Preliminary Results</h2>
 
     <div class="content">
       <p>
-        Probabilistic Recursively Feasible Model Predictive Control (PRF-MPC) significantly improves recursive feasibility over nominal MPC approaches with low computational costs.
+        Our method achieves better safety than the chance-constrained MPC in social navigation tasks.
       </p>
     </div>
 
     <p class="has-text-centered has-text-grey is-size-6">
-      Table 1: Simulation results.
+      Table 1: Social navigation results.
     </p>
 
     <div class="table-container">
@@ -393,18 +394,18 @@
             <td>CC-MPC</td>
             <td class="has-text-right">2</td>
             <td class="has-text-right">13</td>
-            <td class="has-text-right">7</td>
+            <td class="has-text-right"><strong></strong>7</strong></td>
             <td class="has-text-right">23</td>
-            <td class="has-text-right">11</td>
+            <td class="has-text-right"><strong>11</strong></td>
             <td class="has-text-right">19</td>
           </tr>
           <tr>
             <td><strong>Ours</strong></td>
             <td class="has-text-right"><strong>1</strong></td>
             <td class="has-text-right"><strong>1</strong></td>
-            <td class="has-text-right"><strong>11</strong></td>
+            <td class="has-text-right">11</td>
             <td class="has-text-right"><strong>3</strong></td>
-            <td class="has-text-right"><strong>19</strong></td>
+            <td class="has-text-right">19</td>
             <td class="has-text-right"><strong>10</strong></td>
           </tr>
         </tbody>
@@ -412,10 +413,10 @@
     </div>
 
     <p class="has-text-grey is-size-7">
-      RF Rate denotes the fraction of closed-loop simulations that remain recursively feasible.
-      Cost denotes the 2-norm of the deviation of closed-loop trajectories from the reference trajectory.
-      d<sub>min</sub> indicates the minimum distance to obstacles averaged over all runs.
-      Comp. Time denotes the average worst-case solve time.
+      CC-MPC denotes the chance-constrained MPC.
+      n = 1, 5, 10 indicates the number of human obstacles.
+      Timeout denotes the percentage of times that the method failed to reach the goal within the time limit.
+      Collision denotes the percentage of times that the method caused a collision.
     </p>
   </div>
 </section>
