--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           <p>
             We are developing a safety control and filtering method for high-dimensional stochastic systems using reachability analysis, control barrier functions, and machine learning.
             If you are interested in this work, please contact 
-            <a href="https://hyeontaesung.github.io/">me</a>.
+            <a href="https://hyeontaesung.github.io/"><strong>Hyeontae Sung</strong></a>.
           </p>
         </div>
       </div>
@@ -371,6 +371,12 @@
       Timeout denotes the percentage of times that the method failed to reach the goal within the time limit.
       Collision denotes the percentage of times that the method caused a collision.
     </p>
+
+    <figure class="image is-16by9" style="margin-bottom: 1.5rem;">
+      <img src="static/images/oneHuman.gif"
+           alt="Preliminary social navigation results">
+    </figure>
+
   </div>
 </section>
 <!-- End Results -->
