--- a/index.html
+++ b/index.html
@@ -372,10 +372,14 @@
       Collision denotes the percentage of times that the method caused a collision.
     </p>
 
-    <figure class="image is-16by9" style="margin-bottom: 1.5rem;">
+    <figure class="image" style="margin-bottom: 1.5rem;">
       <img src="static/images/oneHuman.gif"
-           alt="Preliminary social navigation results">
+           alt="Preliminary social navigation results"
+           style="width: 100%; height: auto;">
     </figure>
+    <h2 class="subtitle has-text-centered">
+      Chance-constrained MPC vs. our method in a social navigation scenario with one human obstacle. Our method avoids the human obstacle with a larger distance.
+    </h2>
 
   </div>
 </section>
