--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       </video>
       <!-- TODO: Replace with your video description -->
       <h2 class="subtitle has-text-centered">
-        social navigation example with 10 human obstacles
+        Social navigation example with 10 human obstacles
       </h2>
     </div>
   </div>
@@ -328,7 +328,7 @@
     <h2 class="subtitle has-text-centered">
       Chance-constrained MPC vs. our method in a social navigation scenario with one human obstacle. Our method avoids the human obstacle with a larger distance.
     </h2>
-    
+
     <p class="has-text-centered has-text-grey is-size-6">
       Table 1: Social navigation results.
     </p>
@@ -356,7 +356,7 @@
             <td>CC-MPC</td>
             <td class="has-text-right">2</td>
             <td class="has-text-right">13</td>
-            <td class="has-text-right"><strong></strong>7</strong></td>
+            <td class="has-text-right"><strong>7</strong></td>
             <td class="has-text-right">23</td>
             <td class="has-text-right"><strong>11</strong></td>
             <td class="has-text-right">19</td>
